--- a/config/endpoints.yaml
+++ b/config/endpoints.yaml
@@ -11,3 +11,7 @@ models:
     endpoint_name: inference-component-endpoint
     inference_component: phi-3-medium-4k
     backend: LMI
+  - model: Llama3-ChatQA-1.5-8B
+    endpoint_name: inference-component-endpoint
+    inference_component: llama-3-chatqa-8b
+    backend: LMI
