--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ serde_yaml = "0.9.34"
 opentelemetry = "0.23.0"
 opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
 opentelemetry-otlp = { version = "0.16.0", features = ["grpc-tonic", "logs", "metrics"] }
+log = "0.4.21"
+aws-sdk-bedrockruntime = "1.45.0"
