--- a/config/endpoints.yaml
+++ b/config/endpoints.yaml
@@ -1,12 +1,10 @@
 models:
-  - model: Llama-3-8B
-    endpoint_name: inference-component-endpoint
-    inference_component: llama-3-8b
-    backend: LMI
-  - model: Llama-3-70B-Instruct
-    endpoint_name: inference-component-endpoint
-    inference_component: llama-3-70b-instruct
-    backend: LMI
+  - model: Llama-3.1-70B-Instruct
+    backend: Bedrock
+    target_model: meta.llama3-1-70b-instruct-v1:0
+  - model: Llama-3.1-405B-Instruct
+    backend: Bedrock
+    target_model: meta.llama3-1-405b-instruct-v1:0
   - model: Phi-3-medium-4k-instruct
     endpoint_name: inference-component-endpoint
     inference_component: phi-3-medium-4k
